--- a/zoznamStudentovGUI/zoznamStudentovGUI/src/PridajStudenta.form
+++ b/zoznamStudentovGUI/zoznamStudentovGUI/src/PridajStudenta.form
@@ -65,7 +65,7 @@
               <text value="Meno:"/>
             </properties>
           </component>
-          <component id="b5275" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+          <component id="b5275" class="javax.swing.JTextField" binding="meno">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
@@ -81,7 +81,7 @@
               <text value="Priezvisko:"/>
             </properties>
           </component>
-          <component id="c0632" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+          <component id="c0632" class="javax.swing.JTextField" binding="priezvisko">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
